--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "embedded-chat-system",
-  "version": "1.0.0",
-  "description": "A free self-hosted embedded chat system for product sales and support.",
-  "main": "index.js",
+  "name": "whois-chat",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "axios": "^0.21.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.3.2",
+    "openai": "^4.0.0",
+    "axios": "^1.6.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "typescript": "^4.1.2",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
-  },
-  "homepage": "https://yourwebsite.com",
-  "license": "MIT"
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "autoprefixer": "^10.0.1"
+  }
 }
